--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>senla-internship-project-</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>authorization</module>
+        <module>car</module>
+        <module>rental</module>
+        <module>common</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
