--- a/car/model/pom.xml
+++ b/car/model/pom.xml
@@ -12,4 +12,13 @@
     <artifactId>model</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- HIBERNATE -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate-version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
