--- a/rental/dao/pom.xml
+++ b/rental/dao/pom.xml
@@ -12,4 +12,19 @@
     <artifactId>dao</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- JPA -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring-boot-starter-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.senla.rental</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
