--- a/rental/model/pom.xml
+++ b/rental/model/pom.xml
@@ -12,4 +12,13 @@
     <artifactId>model</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- JPA -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring-boot-starter-version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
