--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <maven.compiler.target>17</maven.compiler.target>
 
         <common-hibernate-version>6.1.6.Final</common-hibernate-version>
+        <common-mupstruct-version>1.5.2.Final</common-mupstruct-version>
+        <common-postgresql-version>42.5.1</common-postgresql-version>
         <spring-boot-starter-version>3.0.6</spring-boot-starter-version>
         <spring-version>6.0.5</spring-version>
     </properties>
@@ -31,6 +33,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.26</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+
 
     </dependencies>
 
