--- a/authorization/dao/pom.xml
+++ b/authorization/dao/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring-boot-starter-version}</version>
         </dependency>
+        <!-- POSTGRES -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${common-postgresql-version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.senla.authorization</groupId>
