--- a/car/dao/pom.xml
+++ b/car/dao/pom.xml
@@ -23,13 +23,13 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>${hibernate-version}</version>
+            <version>${common-hibernate-version}</version>
         </dependency>
         <!-- POSTGRES -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${postgresql-version}</version>
+            <version>${common-postgresql-version}</version>
         </dependency>
 
         <dependency>
