--- a/common/pom.xml
+++ b/common/pom.xml
@@ -36,7 +36,19 @@
             <artifactId>spring-orm</artifactId>
             <version>${spring-version}</version>
         </dependency>
-
+        <!-- SERVLET API -->
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>${common-jakarta-servlet-api-varsion}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- SPRING BOOT STARTER SECURITY -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${spring-boot-starter-version}</version>
+        </dependency>
         <!-- HIBERNATE -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -63,6 +75,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- JACKSON MAPPER -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.1</version>
+        </dependency>
     </dependencies>
 
 </project>
