--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+spring.liquibase.enabled=true
+spring.liquibase.change-log=liquibase/changelog-master.xml
 
 server.port=8081
 database.secret=secret
