Added car microservice
Added dao, service, controller, client layers and security. Added liquibase. Added xml scripts for liquibase.

--- a/car/model/pom.xml
+++ b/car/model/pom.xml
@@ -19,6 +19,24 @@
             <artifactId>hibernate-core</artifactId>
             <version>${common-hibernate-version}</version>
         </dependency>
+
+        <!-- JPA MODEL GEN -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <version>${common-hibernate-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.senla.common</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
