--- a/car/dto/pom.xml
+++ b/car/dto/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>dto</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.senla.common</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
