Added rental microservie.
Added modules for rental microservice (dao, service, controller). Added security for rental microservice. Fixed maven.

--- a/authorization/pom.xml
+++ b/authorization/pom.xml
@@ -20,6 +20,7 @@
         <module>controller</module>
         <module>dto</module>
         <module>run</module>
+        <module>client</module>
     </modules>
     <packaging>pom</packaging>
 
