--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/car-rental
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.jpa.database=postgresql
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
