--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.senla.common</groupId>
     <artifactId>common</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- SPRING -->
