--- a/rental/pom.xml
+++ b/rental/pom.xml
@@ -19,6 +19,7 @@
         <module>controller</module>
         <module>dto</module>
         <module>run</module>
+        <module>common</module>
     </modules>
     <packaging>pom</packaging>
 
