--- a/car/dao/pom.xml
+++ b/car/dao/pom.xml
@@ -31,6 +31,20 @@
             <artifactId>postgresql</artifactId>
             <version>${common-postgresql-version}</version>
         </dependency>
+        <!-- H2 DATABASE -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- LIQUIBASE -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.10.3</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.senla.car</groupId>
@@ -44,6 +58,11 @@
         </dependency>
         <dependency>
             <groupId>com.senla.common</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.senla.car</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
