--- a/car/service/pom.xml
+++ b/car/service/pom.xml
@@ -24,6 +24,19 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>${common-mupstruct-version}</version>
         </dependency>
+        <!-- MOCKITO -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${common-mokito-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${common-mokito-version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.senla.car</groupId>
