--- a/car/controller/pom.xml
+++ b/car/controller/pom.xml
@@ -42,6 +42,20 @@
             <version>2.2.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- H2 DATABASE -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- LIQUIBASE -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.10.3</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.senla.car</groupId>
