--- a/rental/run/pom.xml
+++ b/rental/run/pom.xml
@@ -57,4 +57,26 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>rental-run</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.senla.rental.run.RunRentalApplication</mainClass>
+                    <finalName>rental-run</finalName>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
