--- a/rental/dao/pom.xml
+++ b/rental/dao/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>postgresql</artifactId>
             <version>${common-postgresql-version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.senla.rental</groupId>
