Added swaggers for spring boot microservices
Added swagger for authorization and rental microservices. Swagger for non-boot car microservice not working... (it absolutely broke microservice)

--- a/authorization/controller/pom.xml
+++ b/authorization/controller/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot-starter-version}</version>
         </dependency>
+        <!-- SWAGGER -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
         <!-- H2 DATABASE -->
         <dependency>
             <groupId>com.h2database</groupId>
