--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.show-sql=true
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=liquibase/changelog-master.xml
+logging.level.root=info
 
 server.port=8081
 database.secret=secret
