--- a/car/pom.xml
+++ b/car/pom.xml
@@ -66,6 +66,17 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.6</version>
         </dependency>
+        <!-- JACKSON MAPPER -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
     </dependencies>
 
 </project>
