--- a/car/run/pom.xml
+++ b/car/run/pom.xml
@@ -13,6 +13,12 @@
     <packaging>war</packaging>
 
     <dependencies>
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
         <!-- LIQUIBASE -->
         <dependency>
             <groupId>org.liquibase</groupId>
