--- a/common/pom.xml
+++ b/common/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
         <!-- VALIDATION -->
         <dependency>
             <groupId>jakarta.validation</groupId>
