--- a/authorization/controller/pom.xml
+++ b/authorization/controller/pom.xml
@@ -20,11 +20,11 @@
             <version>${spring-boot-starter-version}</version>
         </dependency>
         <!-- SWAGGER -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.1.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+<!--            <version>2.1.0</version>-->
+<!--        </dependency>-->
         <!-- H2 DATABASE -->
         <dependency>
             <groupId>com.h2database</groupId>
