--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+springdoc.show-login-endpoint=false
+
 spring.liquibase.enabled=true
 spring.liquibase.change-log=liquibase/changelog-master.xml
 logging.level.root=info
