--- a/common/pom.xml
+++ b/common/pom.xml
@@ -37,9 +37,9 @@
             <version>${spring-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>1.9.19</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>3.0.6</version>
         </dependency>
 
 
