--- a/authorization/controller/pom.xml
+++ b/authorization/controller/pom.xml
@@ -13,18 +13,12 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- SPRING BOOT STARTER WEB -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot-starter-version}</version>
-        </dependency>
         <!-- SWAGGER -->
-<!--        <dependency>-->
-<!--            <groupId>org.springdoc</groupId>-->
-<!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
-<!--            <version>2.1.0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
         <!-- H2 DATABASE -->
         <dependency>
             <groupId>com.h2database</groupId>
