--- a/rental/run/pom.xml
+++ b/rental/run/pom.xml
@@ -21,6 +21,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.senla.authorization</groupId>
+            <artifactId>client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.senla.car</groupId>
+            <artifactId>client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.senla.rental</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
