--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -20,4 +20,4 @@ security.access.token.lifetime=${ACCESS_TOKEN_LIFETIME:1800}
 security.refresh.token.lifetime=${REFRESH_TOKEN_LIFETIME:2592000}
 
 microservice.name=${MICROSERVICE_NAME:AUTHORIZATION_MICROSERVICE}
-authorization.microservice.url=${AUTHORIZATION_MICROSERVICE_URL:http://localhost:8081/AuthorizationMicroservice}
+authorization.microservice.url=${AUTHORIZATION_MICROSERVICE_URL:http://localhost:8081}
