Created starter for jwt token security

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -63,23 +63,11 @@
             <version>${common-hibernate-version}</version>
         </dependency>
 
-        <!-- JWT -->
+        <!-- CUSTOM STARTER -->
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-api</artifactId>
-            <version>0.11.5</version>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-impl</artifactId>
-            <version>0.11.5</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-jackson</artifactId>
-            <version>0.11.5</version>
-            <scope>runtime</scope>
+            <groupId>com.senla</groupId>
+            <artifactId>jwt-security-utils-senla-spring-boot-starter</artifactId>
+            <version>3.0.6</version>
         </dependency>
 
         <!-- JACKSON MAPPER -->
