--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>car</module>
         <module>rental</module>
         <module>common</module>
+        <module>jwt-security-utils-starter</module>
     </modules>
 
     <properties>
