--- a/rental/client/pom.xml
+++ b/rental/client/pom.xml
@@ -3,32 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>payment</artifactId>
-        <groupId>com.senla.payment</groupId>
+        <artifactId>rental</artifactId>
+        <groupId>com.senla.rental</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>controller</artifactId>
+    <artifactId>client</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- SPRING BOOT STARTER WEB -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot-starter-version}</version>
-        </dependency>
-        <!-- SWAGGER -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.senla.payment</groupId>
-            <artifactId>service</artifactId>
+            <groupId>com.senla.rental</groupId>
+            <artifactId>dto</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
