Added rental rate table and api for it
Also added price column to request table

--- a/car/controller/pom.xml
+++ b/car/controller/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>jackson-core</artifactId>
             <version>2.15.1</version>
         </dependency>
+        <!-- CUSTOM STARTER -->
+        <dependency>
+            <groupId>com.senla</groupId>
+            <artifactId>jwt-security-utils-senla-spring-boot-starter</artifactId>
+            <version>3.0.6</version>
+        </dependency>
 
         <dependency>
             <groupId>com.senla.car</groupId>
