--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,8 @@ services:
     image: mongo
     container_name: database-mongo
     volumes:
-      - ./mongodb/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - data:/data
     environment:
-      - MONGO_INITDB_DATABASE=payment
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
     ports:
@@ -46,7 +45,7 @@ services:
     container_name: mongo-express
     restart: always
     environment:
-      - ME_CONFIG_MONGODB_URL=mongodb://root:root@database-mongo:27017/payment
+      - ME_CONFIG_MONGODB_SERVER=database-mongo
       - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
       - ME_CONFIG_BASICAUTH_USERNAME=root
       - ME_CONFIG_BASICAUTH_PASSWORD=root
@@ -112,3 +111,6 @@ services:
       PROFILE_ADMIN_REQUESTS_PAGE_SIZE: 5
       PROFILE_ADMIN_REFUNDS_PAGE_SIZE: 5
       PROFILE_USER_REFUNDS_PAGE_SIZE: 5
+
+volumes:
+  data: {}
