--- a/rental/controller/pom.xml
+++ b/rental/controller/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <!-- CUSTOM STARTER -->
+        <dependency>
+            <groupId>com.senla</groupId>
+            <artifactId>jwt-security-utils-senla-spring-boot-starter</artifactId>
+            <version>3.0.6</version>
+        </dependency>
 
         <dependency>
             <groupId>com.senla.rental</groupId>
