--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -21,6 +21,7 @@
         <module>controller</module>
         <module>run</module>
         <module>client</module>
+        <module>common</module>
     </modules>
     <packaging>pom</packaging>
 
