--- a/payment/run/src/main/resources/application.properties
+++ b/payment/run/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.data.mongodb.database=payment
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
+payment.topic.name=${PAYMENT_TOPIC_NAME:payment_topic}
+
 server.port=8084
 
 microservice.name=${MICROSERVICE_NAME:RENTAL_MICROSERVICE}
