--- a/rental/run/src/main/resources/application.properties
+++ b/rental/run/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
+payment.topic.name=${PAYMENT_TOPIC_NAME:payment_topic}
+
 spring.liquibase.enabled=true
 spring.liquibase.change-log=liquibase/changelog-master.xml
 
