--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,27 @@ services:
     links:
       - database-mongo
 
+  zookeeper:
+    image: 'wurstmeister/zookeeper'
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+
+  kafka:
+    container_name: kafka
+    image: 'wurstmeister/kafka'
+    ports:
+      - 9092:9092
+    environment:
+      DOCKER_API_VERSION: 1.22
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "payment_topic"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+    depends_on:
+      - zookeeper
+    restart: always
+
   authorization-microservice:
     container_name: authorization-microservice
     depends_on:
