Payment microservice now is abstract
Needs some addition fixes.

--- a/rental/run/src/main/resources/application.properties
+++ b/rental/run/src/main/resources/application.properties
@@ -7,8 +7,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+spring.kafka.listener.ack-mode=record
 kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
-access.payment.topic=${PAYMENT_TOPIC_NAME:access_payment_topic}
+payment.request.topic=${PAYMENT_REQUEST_TOPIC_NAME:access_payment_topic}
+rental.payment.confirm.topic=${RENTAL_CONFIRM_PAYMENT_TOPIC_NAME:rental_payment_confirm}
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=liquibase/changelog-master.xml
