--- a/payment/run/src/main/resources/application.properties
+++ b/payment/run/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
 kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
+spring.kafka.listener.ack-mode=record
 change.request.status.topic.name=${CHANGE_REQUEST_STATUS_TOPIC_NAME:change_request_status_topic}
 
 server.port=8084
