--- a/payment/run/src/main/resources/application.properties
+++ b/payment/run/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.senla.jwt.utils.refresh-token-secret=zL1HB3Pch05Avfynovxrf/kpF9O2m4NCWKJU
 local.container.packages.scan=com.senla.payment
 
 car.rental.user.receipts.page.size=${USER_RECEIPTS_PAGE_SIZE:5}
+payment.requests.page.size=${PAYMENT_REQUESTS_PAGE_SIZE:5}
