--- a/rental/run/src/main/resources/application.properties
+++ b/rental/run/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 
 spring.kafka.listener.ack-mode=record
 kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
-payment.request.topic=${PAYMENT_REQUEST_TOPIC_NAME:access_payment_topic}
+payment.request.topic=${PAYMENT_REQUEST_TOPIC_NAME:payment_request_topic}
 rental.payment.confirm.topic=${RENTAL_CONFIRM_PAYMENT_TOPIC_NAME:rental_payment_confirm}
 
 spring.liquibase.enabled=true
