--- a/rental/service/pom.xml
+++ b/rental/service/pom.xml
@@ -26,6 +26,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.senla.payment</groupId>
+            <artifactId>dto</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.senla.rental</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -62,8 +67,9 @@
         </dependency>
         <dependency>
             <groupId>com.senla.payment</groupId>
-            <artifactId>client</artifactId>
+            <artifactId>dto</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
